--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,33 +4,28 @@ on:
   push:
     branches:
       - main
-    tags:
-      - 'v*.*.*'
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.x'
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20'  # Actualiza a la versión de Node.js >=20.8.1
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          # Instala dependencias adicionales si es necesario
+    - name: Install dependencies
+      run: |
+        npm install -g semantic-release
 
-      - name: Run tests
-        run: |
-          # Aquí puedes ejecutar tus pruebas
-          # Ejemplo: python -m unittest discover
+    - name: Run semantic-release
+      run: |
+        semantic-release
 
-      - name: Release
-        run: |
-          npm install -g semantic-release
-          semantic-release
